--- a/app/src/main/translations/an.yaml
+++ b/app/src/main/translations/an.yaml
@@ -41,8 +41,8 @@ station_no_distance: ?? km
 station_status_unknown: Zarrau??
 station_status_permanently_closed: Zarrau permanentment
 station_status_closed: Zarrau
-station_status_opens_at: Abre %s
-station_status_closes_at: Zarra %s
+station_status_opens_at: Abre {when}
+station_status_closes_at: Zarra {when}
 station_status_open: Obierto
 station_status_247: Obierto 24h
 location_not_available: Ubicación no detectada
@@ -52,5 +52,5 @@ location_deactivated: A ubicación ye desactivada
 location_activate: Activa
 location_permisions_concede: Permite
 refreshing_data: S'están actualizando las datos…
-failed_download: "Ha fallau a descarga de datos: %s"
+failed_download: "Ha fallau a descarga de datos: {error}"
 open_in_maps: Ubrir en o mapa
