--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -8,6 +8,8 @@
     <string name="settings_language_title">Idioma</string>
     <string name="settings_language_summary">Canvia el idioma de la aplicación</string>
     <string name="language_system_default">Sistema</string>
+    <string name="settings_translate_title">Traduce</string>
+    <string name="settings_translate_summary">Ayuda a traducir tu idioma en Weblate</string>
     <string name="settings_theme">Tema</string>
     <string name="theme_light">Claro</string>
     <string name="theme_dark">Oscuro</string>
