--- a/app/src/main/translations/an.yaml
+++ b/app/src/main/translations/an.yaml
@@ -6,6 +6,8 @@ settings_category_language_appearance: Luenga y apariencia
 settings_language_title: Idioma
 settings_language_summary: Cambia l'idioma de l'aplicación
 language_system_default: Sistema
+settings_translate_title: Traduix
+settings_translate_summary: Ayuda a traducir o tuyo idioma en Weblate
 settings_theme: Tema
 theme_light: Claro
 theme_dark: Fosco
