--- a/app/src/main/translations/ca.yaml
+++ b/app/src/main/translations/ca.yaml
@@ -6,6 +6,8 @@ settings_category_language_appearance: Llengua i aparença
 settings_language_title: Llengua
 settings_language_summary: Canvia la llengua de l'aplicació
 language_system_default: Sistema
+settings_translate_title: Tradueix
+settings_translate_summary: Ajuda a traduir la teva llengua a Weblate
 settings_theme: Tema
 theme_light: Clar
 theme_dark: Fosc
