🌐 fix Euskara language name

--- a/app/src/main/translations/eu.yaml
+++ b/app/src/main/translations/eu.yaml
@@ -1,5 +1,5 @@
 language_code: eu
-language_name: Ingelesa
+language_name: Euskara
 app_name: Carburoid
 menu_settings: Doikuntzak
 settings_category_language_appearance: Hizkuntza eta itxura
