--- a/meta/translations/ca.yaml
+++ b/meta/translations/ca.yaml
@@ -1,15 +1,16 @@
 project_name: Carburoid
 splash_motto: Benzina al millor preu, més aprop
-short_description: Troba benzineres a l'Estat Espanyol per preu i distància
+short_description: Troba benzineres a Espanya per preu i distància
 full_description_md: |+
   Funcionalitats:
 
+  - Dades oficals que envien les benzineres al Ministeri d'Industria Espanyol
   - Mostra només les benzineres rellevants: o més properes o més barates que d'altres
-  - No considera les que están tancades i no obriran en cert temps
-  - No considera les que no tenen el teu producte
+  - Descarta les que no tenen el teu producte
+  - Descarta les que están tancades i no obriran aviat
   - Les que tanquen o obren aviat es mostren pero no serveixen per descartar d'altres, per si no hi arribes a temps o massa d'hora
   - Mostra les estacions descartades deshabilitant cada criteri
-  - Pantalles de llista i detall
+  - Pantalles de llistat i detall
   - Obre la benzinera amb l'aplicació de mapes que vulguis
   - Traduccions a l'Espanyol, Català, Basc, Gallec, Aragonés i properament d'altres.
   - Temes fosc i clar
