--- a/app/src/main/translations/en.yaml
+++ b/app/src/main/translations/en.yaml
@@ -56,3 +56,6 @@ location_permisions_concede: Allow
 refreshing_data: Refreshing data…
 failed_download: "Download failed: {error}"
 open_in_maps: Open in a map
+location_picker_title: Select location
+location_picker_search_location_hint: Search city or address
+location_picker_no_results: No locations found
