--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -58,7 +58,7 @@
     <string name="refreshing_data">Se están actualitzando los datos…</string>
     <string name="failed_download">Ha fallado la descarga de datos: %1$s</string>
     <string name="open_in_maps">Abre en el mapa</string>
-    <string name="location_picker_title">Selecciona ubicación</string>
-    <string name="location_picker_search_location_hint">Busca ciudad o dirección</string>
+    <string name="location_picker_title">Selecciona una ubicación</string>
+    <string name="location_picker_search_location_hint">Busca una ciudad o dirección</string>
     <string name="location_picker_no_results">No se encontraron ubicaciones</string>
 </resources>
