✨ Interactive map and Material search box

--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -59,6 +59,7 @@
     <string name="failed_download">Ha fallat la descarrega de dades: %1$s</string>
     <string name="open_in_maps">Obre al mapa</string>
     <string name="location_picker_title">Escull una ubicació</string>
+    <string name="location_picker_search_icon_description">Cerca</string>
     <string name="location_picker_search_location_hint">Cerca una ciutat o adreça</string>
     <string name="location_picker_no_results">No s\'han trobat ubicacions</string>
 </resources>
