--- a/app/src/main/translations/an.yaml
+++ b/app/src/main/translations/an.yaml
@@ -57,5 +57,6 @@ refreshing_data: S'están actualizando las datos…
 failed_download: "Ha fallau a descarga de datos: {error}"
 open_in_maps: Ubrir en o mapa
 location_picker_title: Triga una ubicación
+location_picker_search_icon_description: Circar
 location_picker_search_location_hint: Busca una ciudat u adreza
 location_picker_no_results: No se trobó garra ubicación
