--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -57,5 +57,6 @@ refreshing_data: Se están actualitzando los datos…
 failed_download: "Ha fallado la descarga de datos: {error}"
 open_in_maps: Abre en el mapa
 location_picker_title: Selecciona una ubicación
+location_picker_search_icon_description: Busca
 location_picker_search_location_hint: Busca una ciudad o dirección
 location_picker_no_results: No se encontraron ubicaciones
