--- a/app/src/main/translations/eu.yaml
+++ b/app/src/main/translations/eu.yaml
@@ -57,5 +57,6 @@ refreshing_data: Datuak eguneratzen…
 failed_download: 'Deskargak huts egin du: {error}'
 open_in_maps: Mapa batean ireki
 location_picker_title: Hautatu kokapen bat
+location_picker_search_icon_description: Bilatu
 location_picker_search_location_hint: Bilatu hiri edo helbide bat
 location_picker_no_results: Ez da kokapenik aurkitu
