--- a/app/src/main/translations/an.yaml
+++ b/app/src/main/translations/an.yaml
@@ -59,4 +59,5 @@ open_in_maps: Ubrir en o mapa
 location_picker_title: Triga una ubicación
 location_picker_search_icon_description: Circar
 location_picker_search_location_hint: Busca una ciudat u adreza
+location_picker_searching: Cercando…
 location_picker_no_results: No se trobó garra ubicación
