--- a/app/src/main/translations/eu.yaml
+++ b/app/src/main/translations/eu.yaml
@@ -59,4 +59,5 @@ open_in_maps: Mapa batean ireki
 location_picker_title: Hautatu kokapen bat
 location_picker_search_icon_description: Bilatu
 location_picker_search_location_hint: Bilatu hiri edo helbide bat
+location_picker_searching: Bilatzen…
 location_picker_no_results: Ez da kokapenik aurkitu
