--- a/app/src/main/res/values-an/strings.xml
+++ b/app/src/main/res/values-an/strings.xml
@@ -61,5 +61,6 @@
     <string name="location_picker_title">Triga una ubicación</string>
     <string name="location_picker_search_icon_description">Circar</string>
     <string name="location_picker_search_location_hint">Busca una ciudat u adreza</string>
+    <string name="location_picker_searching">Cercando…</string>
     <string name="location_picker_no_results">No se trobó garra ubicación</string>
 </resources>
