--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -61,5 +61,6 @@
     <string name="location_picker_title">Hautatu kokapen bat</string>
     <string name="location_picker_search_icon_description">Bilatu</string>
     <string name="location_picker_search_location_hint">Bilatu hiri edo helbide bat</string>
+    <string name="location_picker_searching">Bilatzen…</string>
     <string name="location_picker_no_results">Ez da kokapenik aurkitu</string>
 </resources>
