--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,5 +61,6 @@
     <string name="location_picker_title">Select location</string>
     <string name="location_picker_search_icon_description">Search</string>
     <string name="location_picker_search_location_hint">Search city or address</string>
+    <string name="location_picker_searching">Searching…</string>
     <string name="location_picker_no_results">No locations found</string>
 </resources>
