--- a/app/src/main/translations/en.yaml
+++ b/app/src/main/translations/en.yaml
@@ -59,4 +59,5 @@ open_in_maps: Open in a map
 location_picker_title: Select location
 location_picker_search_icon_description: Search
 location_picker_search_location_hint: Search city or address
+location_picker_searching: Searching…
 location_picker_no_results: No locations found
