--- a/app/src/main/translations/gl.yaml
+++ b/app/src/main/translations/gl.yaml
@@ -59,4 +59,5 @@ open_in_maps: Abrir no mapa
 location_picker_title: Seleccione unha ubicación
 location_picker_search_icon_description: Buscar
 location_picker_search_location_hint: Busca unha cidade ou enderezo
+location_picker_searching: Buscando…
 location_picker_no_results: Non se atoparon ubicacións
